[project]
name = "uv-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ell-ai[sqlite]==0.0.15",
    "kuzu==0.7.0",
    "llama-index-embeddings-openai~=0.3.0",
    "llama-index==0.12.2",
    "python-dotenv==1.0.1",
    "llama-index-graph-stores-kuzu~=0.6.0",
    "polars==1.16.0",
    "pyarrow==18.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
